Fix small layout issue

--- a/src/components/ForecastHour/ForecastHour.module.scss
+++ b/src/components/ForecastHour/ForecastHour.module.scss
@@ -19,7 +19,7 @@
   font-size: 0.875rem;
   font-weight: 700;
   text-align: right;
-  flex: 0 0 3rem;
+  flex: 0 0 2.75rem;
 
   @include respond-to(medium) {
     margin: 0;
